--- a/pom.xml
+++ b/pom.xml
@@ -13,66 +13,40 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <junit.version>4.13.2</junit.version>
-        <spock.version>2.2-M1-groovy-4.0</spock.version>
-        <byte-buddy.version>1.12.8</byte-buddy.version>
-        <guava.version>31.1-jre</guava.version>
-        <hamcrest.version>2.2</hamcrest.version>
-        <slf4j.version>1.7.30</slf4j.version>
-        <guice.version>5.1.0</guice.version>
-        <cucumber.version>7.4.0</cucumber.version>
-        <gson.version>2.9.0</gson.version>
-        <junit5.version>5.8.2</junit5.version>
-        <mockito.version>3.3.3</mockito.version>
-        <assertj.version>3.22.0</assertj.version>
-        <commons.lang.version>3.12.0</commons.lang.version>
-        <commons.lang2.version>2.6</commons.lang2.version>
-        <commons.io.version>2.11.0</commons.io.version>
-        <commons.text.version>1.9</commons.text.version>
-        <commons.beanutils.version>1.9.4</commons.beanutils.version>
-        <commons.collections.version>3.2.2</commons.collections.version>
-        <commons.net.version>3.8.0</commons.net.version>
-        <commons.codec.version>1.15</commons.codec.version>
-        <freemarker.version>2.3.31</freemarker.version>
-        <selenium.version>4.3.0</selenium.version>
-        <jsonassert.version>1.5.0</jsonassert.version>
-        <jsoup.version>1.14.3</jsoup.version>
-        <joda-time.version>2.8.2</joda-time.version>
-        <xstream.version>1.4.19</xstream.version>
-        <opencsv.version>2.0</opencsv.version>
-        <typesafe.version>1.4.2</typesafe.version>
-        <imgscalr.version>4.2</imgscalr.version>
-        <awaitility.version>4.2.0</awaitility.version>
-        <freemarker.version>2.3.31</freemarker.version>
-        <fluentlenium.version>0.10.2</fluentlenium.version>
-        <htmlunit.version>3.62.0</htmlunit.version>
-        <webdrivermanager.version>5.1.1</webdrivermanager.version>
-        <filters.version>2.0.235</filters.version>
-        <ngwebdriver.version>1.1.6</ngwebdriver.version>
-        <jimfs.version>1.2</jimfs.version>
-        <jbehave.version>4.8.3</jbehave.version>
-        <opentest4j.version>1.2.0</opentest4j.version>
-        <ant.version>1.10.12</ant.version>
-        <restassured.version>5.1.1</restassured.version>
-        <wiremock.version>1.58</wiremock.version>
-        <thymeleaf.version>3.1.0.M1</thymeleaf.version>
-        <javassist.version>3.28.0-GA</javassist.version>
-        <jackson.version>2.13.3</jackson.version>
-        <xchart.version>3.5.2</xchart.version>
+        <serenity.version>2.0.91</serenity.version>
+        <serenity.maven.version>2.0.91</serenity.maven.version>
+        <serenity.cucumber.version>2.1.2</serenity.cucumber.version>
+        <cucumber.version>4.8.0</cucumber.version>
+
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-junit -->
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-junit</artifactId>
+            <version>${serenity.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-core -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-core</artifactId>
-            <version>3.2.5</version>
+            <version>${serenity.version}</version>
         <exclusions>
                 <exclusion>
                     <groupId>io.cucumber</groupId>
@@ -83,7 +57,7 @@
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-screenplay</artifactId>
-            <version>3.2.5</version>
+            <version>${serenity.version}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -92,24 +66,110 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-cucumber4 -->
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-cucumber4</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>7.4.1</version>
+            <version>${cucumber.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-rest-assured -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-rest-assured</artifactId>
-            <version>3.2.5</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/net.serenity-bdd.maven.plugins/serenity-maven-plugin -->
-        <dependency>
-            <groupId>net.serenity-bdd.maven.plugins</groupId>
-            <artifactId>serenity-maven-plugin</artifactId>
-            <version>3.2.5</version>
+            <version>${serenity.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <includes>
+                        <include>**/*.java</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>net.serenity-bdd.maven.plugins</groupId>
+                <artifactId>serenity-maven-plugin</artifactId>
+                <version>3.2.5</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.serenity-bdd</groupId>
+                        <artifactId>serenity-core</artifactId>
+                        <version>${serenity.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>serenity-reports</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>aggregate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+
 
 </project>
